v 6.7.0
  - Add support for Gemnasium as a Project Service (Olivier Gonzalez)
  - Add edit file button to MergeRequest diff
  - Public groups (Jason Hollingsworth)
  - Cleaner headers in Notification Emails (Pierre de La Morinerie)

v 6.6.2
  - Fix 500 error on branch/tag create or remove via UI

v 6.6.1
  - Fix 500 error on files tab if submodules presents

v 6.6.0
  - Retrieving user ssh keys publically(github style): http://__HOST__/__USERNAME__.keys
  - Permissions: Developer now can manage issue tracker (modify any issue)
  - Improve Code Compare page performance
  - Group avatar
  - Pygments.rb replaced with highlight.js
  - Improve Merge request diff store logic
  - Improve render performnace for MR show page
  - Fixed Assembla hardcoded project name
  - Jira integration documentation
  - Refactored app/services
  - Remove snippet expiration
  - Mobile UI improvements (Drew Blessing)
  - Fix block/remove UI for admin::users#show page
  - Show users' group membership on users' activity page
  - User pages are visible without login if user is authorized to a public project
  - Markdown rendered headers have id derived from their name and link to their id
  - Improve application to work faster with large groups (100+ members)
  - Multiple emails per user
  - Show last commit for file when view file source
  - Restyle Issue#show page and MR#show page
  - Ability to filter by multiple labels for Issues page
  - Rails version to 4.0.3
  - Blob and tree gfm links to anchors work

v 6.5.1
  - Fix branch selectbox when create merge request from fork

v 6.5.0
  - Dropdown menus on issue#show page for assignee and milestone (Jason Blanchard)
  - Add color custimization and previewing to broadcast messages
  - Fixed notes anchors
  - Load new comments in issues dynamically
  - Added sort options to Public page
  - New filters (assigned/authored/all) for Dashboard#issues/merge_requests (sponsored by Say Media)
  - Add project visibility icons to dashboard